# imu_compass

./: CMakeLists.txt  README.md  package.xml
config/: imu_compass.yaml  mag_bias.yaml
imu_compass/: CMakeLists.txt  package.xml
imu_compass/src/: imu_compass_node.cpp
imu_compass_bringup/: CMakeLists.txt  package.xml
imu_compass_bringup/config/: imu_compass.yaml
imu_compass_bringup/launch/: imu_compass.launch.py
include/imu_compass/: imu_compass.hpp  imu_compass_node.hpp
launch/: imu_compass.launch.py
scripts/: compute_calibration.py
src/: imu_compass.cpp  imu_compass_main.cpp  imu_compass_node.cpp
