<?xml version="1.0"?>
<package format="3">
  <name>imu_compass</name>
  <version>0.0.5</version>
  <description>Node to combine IMU data (accelerometers and gyroscopes) with Compass data (magnetometers) for a cleaner reading of a Vehicle's Heading</description>
  <maintainer email="pmukherj@clearpathrobotics.com">Prasenjit Mukherjee</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- Optional Python dependency (if the calibration script uses it) -->
  <exec_depend>python3-scipy</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>