<?xml version="1.0"?>
<package format="3">
  <name>imu_compass_bringup</name>
  <version>0.0.5</version>
  <description>Bringup package for imu compass</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>imu_compass</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>